--- a/dumbhippo/trunk/server/web/css3/site.css
+++ b/dumbhippo/trunk/server/web/css3/site.css
@@ -337,7 +337,7 @@ div.dh-async-action-link-complete {
 	font-size:			12px;
 }
 
-.dh-stacker-block-content-controls {
+.dh-stacker-block-controls {
 	font-size:			11px;
 	color:				#666666;
 }
